feat(syntax): add extend type annotation

--- a/notes/lang/python3/001.type-annotation.md
+++ b/notes/lang/python3/001.type-annotation.md
@@ -115,6 +115,7 @@ handle_any("This is Giok.");
 最初 Python 只使用 `Union[T, K]` 來表示可能是型態 `T` 或是 `K`，而在 Python 3.10 之後，我們可以使用 `T | K` 來表示。
 
 ```python
+from typing import Union
 def handle_union(a: str | int, b: str | int) -> Union[str, int]:
     return a + b;
 handle_union(1,5);
@@ -123,6 +124,141 @@ handle_union('1','5');
 
 > [!NOTE]
 > 值得一提的是，前言所及 `Optional` 也是 `Union` 的一種。
-> 我們可以透過 Alias 將 `Union[T,None]` 簡化為 `Optional[T]`。
+> 我們可以透過 Type Alias 將 `Union[T,None]` 簡化為 `Optional[T]`。 Type Alias 之後會提到。
 
 # 型態標注的進階語法 {#advanced-syntax}
+
+講完了基本的型態，要講到比較複雜的。
+也是為什麼我們會有這篇文章的主要原因之一。
+
+## 泛型 {#generic}
+
+撰編程式時，通常目標都是「放諸四海皆準」。在型態相同、透過邏輯處理資料的情況下，我們可以透過 **泛型** 統一這個程式內的所有型態，並且可以更好控管資料型態，而不用 `Any` 去處理。
+
+```python
+from typing import TypeVar
+T = TypeVar('T');
+class LinkedList(Generic[T]):
+    def __init__(self, val: T, next: Optional['LinkedList'] = None) -> None:
+        self.val = val;
+        self.next = next;
+```
+
+這裡我們使用 `TypeVar` 指定制定一個泛型 `T`，並且在 `LinkedList` 中使用這個泛型。
+`TypeVar` 的部分我們會再下一部分進行撰寫。值得注意的是，這裡的 `'LinkedList'` 使用字串標注。這是因為在 Python 中，我們可能會遇到定義 Class 的時候，這個 Class 還沒有被定義。或是我們定義的過程就需要用到自己這個型態。
+
+## TypeVar {#typevar}
+
+制定泛型的時候，我們要「統一」這個 Class 的型態，讓這個 Class 的變數都是這個型態，這時候我們就需要 `TypeVar` 這個型態。
+
+```python
+from typing import TypeVar
+
+K = TypeVar('K');
+IsNumber = TypeVar('Number', bound=float);
+IsNumberOrFloat = TypeVar('Numeric', int, float);
+```
+
+我們指定 TypeVar 的時候可以注意到函數第一個內容是一個字串。這個字串只是為了標記這個 TypeVar 是什麼，我們標記的時候只要記得「語意」、「精簡」的撰寫即可。
+
+在 `K` 這個 Type 中，我們成功之作了一個所謂的泛型 K，這個 K 可以是任何型態可以搭配 Class 進行操作、封裝等等內容； `IsNumber` 則是限制這個泛型只能是 `float` 及他的子型態（這個須參考 _Liskov Substitution Principle_，待之後來理解），在保持 class 的程式執行但不會更改其他程式的運行； `IsNumberOrFloat` 則是限制這個泛型只能是 `int` 或是 `float`。
+
+> [!NOTE]
+> 看起來用了很多方式制定型態，連筆者都不太容易理解。OOP 博大精深。
+
+## NewType 及 Type Alias {#newtype}
+
+程式量一大，如果所有的型態都透過 `TypeVar` 及 `Union` 來定義的話，會讓所有閱讀的人無法閱讀。因此我們用兩個方法來簡化這個問題。
+
+```python
+from typing import NewType, List, Dict
+
+UserId = NewType('UserId', int)
+OrderId = NewType('OrderId', int)
+ProductName = NewType('ProductName', str)
+OrderItem = Dict[ProductName, int]
+UserOrders = Dict[UserId, List[Dict[OrderId, List[OrderItem]]]]
+
+# Sample Code
+def add_order(user_orders: UserOrders, user_id: UserId, order_id: OrderId, items: List[OrderItem]) -> None:
+    if user_id not in user_orders:
+        user_orders[user_id] = []
+    user_orders[user_id].append({order_id: items})
+
+# Testing Data
+user_orders: UserOrders = {}
+
+uid = UserId(1)
+oid = OrderId(101)
+items = [{ProductName("Laptop"): 2}, {ProductName("Mouse"): 3}]
+
+add_order(user_orders, uid, oid, items)
+
+print(user_orders)
+# Output:
+# {
+#     UserId(1): [
+#         {OrderId(101): [{ProductName("Laptop"): 2}, {ProductName("Mouse"): 3}]}
+#     ]
+# }
+
+```
+
+> [!NOTE]
+> 此範例出自 ChatGPT，如有任何問題請告知。
+
+我們利用 NewType 做了一個 `OrderId` 型態；而我們也利用 Type Alias 做了一個型態 `OrderItem`；這個區別在於，NewType 是創建了新的型態，會被 Runtime 視為一個全新的型態，而 Type Alias 只是更改了原本的型態名稱。
+
+## Callable {#callable}
+
+由於 JavaScript ES6 的興起，我們逐漸了解到一個 FP （Functional Programming）的設計語彙：高階函式 Higher Order Function。
+
+在 Python 中也會需要透過 `Callable` 這個型態來標記高階函式裡面的參數是一個函式。
+
+```python
+def measure_time(func: Callable[..., None], *args, **kwargs) -> None:
+    """
+    測量給定函數的運行時間。
+
+    參數：
+        func (Callable[..., None]): 需要測量的函數。
+        *args: 傳遞給函數的參數。
+        **kwargs: 傳遞給函數的關鍵字參數。
+    """
+    start_time = time.perf_counter()  # 記錄開始時間
+    func(*args, **kwargs)             # 執行函數
+    end_time = time.perf_counter()    # 記錄結束時間
+
+    execution_time = end_time - start_time
+    print(f"函數 {func.__name__} 的運行時間: {execution_time:.4f} 秒")
+
+# 測試範例
+
+def example_function(duration: int) -> None:
+    """一個模擬運行時間的函數"""
+    time.sleep(duration)  # 模擬一些需要時間的操作
+
+# 使用 measure_time 測量 example_function 的運行時間
+measure_time(example_function, 2)  # 傳遞 2 秒作為參數，測量 example_function(2) 的運行時間
+```
+
+> [!NOTE]
+> 此範例出自 ChatGPT，如有任何問題請告知。
+
+在這個範例中，我們透過 `Callable` 來標記 `measure_time` 函式的第一個參數是一個函式，這樣我們就可以在函式裡面執行這個函式。而這也體現了 Python 在實現 FP 的一個特性。
+
+## Literal {#literal}
+
+有些人如我在面對多重值的時候，喜歡使用 Enum 來標記這個值。但是 Enum 有一個缺點，就是 Enum 的值是可以被修改的。因此我們可以使用 `Literal` 來標記這個值。
+
+```python
+from typing import Literal
+
+def get_status(status: Literal["success", "failure"]) -> str:
+    return status
+
+print(get_status("success"))  # success
+print(get_status("failure"))  # failure
+```
+
+我們從 Literal 可以「指定」輸入 arg 傳入的內容。
